--- a/_assets/scss/style.scss
+++ b/_assets/scss/style.scss
@@ -9,6 +9,24 @@ $navbar-light-hover-color: $text-primary;
 @import "variables";
 @import "syntax-highlighting-light";
 
+table {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  word-break: normal;
+  word-break: keep-all; // For Firefox to horizontally scroll wider tables.
+  -webkit-overflow-scrolling: touch;
+
+  th {
+    font-weight: bold;
+  }
+
+  th,
+  td {
+    padding: 0.5rem 1rem;
+    border: 1px solid $table-border-color;
+  }
+}
 #scrollButton {
 	display: none;
 	position: fixed;
