This change makes `.container` 's padding a little bit more responsive Fixes https://github.com/cycfi/elements/issues/309#issue-1338297089

--- a/_assets/scss/style.scss
+++ b/_assets/scss/style.scss
@@ -93,7 +93,7 @@ img
 .container
 {
     max-width: 64em;
-    padding: 2rem 6rem;
+    padding: 3.3vh 5vw;
     margin: 0 auto;
     font-size: 1.1rem;
 }
